--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherVane</title>
+    <script src="jquery-3.6.3.min.js"></script>
     <link rel="stylesheet" href="./Assets/styles.css">
 </head>
 
