--- a/main.html
+++ b/main.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherVane</title>
-    <script src="jquery-3.6.3.min.js"></script>
     <link rel="stylesheet" href="./Assets/styles.css">
 </head>
 
@@ -33,6 +32,10 @@
     </section>
 </main>
 
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./Assets/script.js"></script>
 </body>
 </html>
