worked on geolocation support and fetchCurrentWearther function in js file and added in a lot of comments

--- a/main.html
+++ b/main.html
@@ -16,15 +16,21 @@
 <main>
     <section class="current-weather">
         <h2>CURRENT WEATHER</h2>
+        <h4 class="city">Weather in Durham</h4>
+        <div class="temp">43°F</div>
+        <img src="" alt="" class="icon">
+        <div class="description">Cloudy</div>
+        <div class="humidity">Humid</div>
+        <div class="wind">Wind Speed: 25mph</div>
     </section>
     <aside class="search-bar previously-searched btn">
-        <div class="search-btn">
+        <div class="search">
             <h3>SEARCH BAR</h3>
             <input type="search" name="searchbar" id="search-bar" placeholder="Durham, NC">
             <button id="search-btn">Search</button>
         </div>
         <div class="five-day-forecast">
-            <h3>PREVIOUSLY SEARCHED CITIES</h3>
+            <h2>PREVIOUSLY SEARCHED CITIES</h2>
         </div>
     </aside>
     <section>
