--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <main>
     <section class="current-weather">
         <h2>CURRENT WEATHER</h2>
-        <h4 class="city">Weather in Durham</h4>
-        <div class="temp">43°F</div>
+        <h4 id="city">Weather in Durham</h4>
+        <div id="tempValue">Temp Value</div>
         <img src="" alt="" class="icon">
-        <div class="description">Cloudy</div>
-        <div class="humidity">Humid</div>
-        <div class="wind">Wind Speed: 25mph</div>
+        <div id="climateDescription">What's it look like outside?</div>
+        <div id="humidity">How humid is it?</div>
+        <div id="windSpeed">What's the wind speed?</div>
     </section>
     <aside class="search-bar previously-searched btn">
         <div class="search">
