working on fetch to work

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,13 +26,13 @@
     </aside>
 
     <section class="current-weather">
-        <!-- <h2>CURRENT WEATHER</h2>
+        <h2>CURRENT WEATHER</h2>
         <h4 id="city">Weather in Durham</h4>
         <div id="tempValue">Temp Value</div>
-        <img src="" alt="" class="icon">
+        <!-- <img src="" alt="" class="icon"> -->
         <div id="climateDescription">What's it look like outside?</div>
         <div id="humidity">How humid is it?</div>
-        <div id="windSpeed">What's the wind speed?</div> -->
+        <div id="windSpeed">What's the wind speed?</div>
     </section>
     <section class="five-day-forecast">
         <h2>5-DAY FORECAST</h2>
