refactored js and worked on css styling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
       <section class="inputs">
         <label for="CityState">Where are you?</label>
+        <br>
         <input type="text" id="cityState" placeholder="Durham, NC" />
         <button id="searchForWeather">Search</button>
       </section>
@@ -31,7 +32,7 @@
       <h2>5-Day Forecast</h2>
       <section class="fiveDay"></section>
 
-      <h3>Search History</h3>
+      <h3 style="text-align: end;">Search History</h3>
       <section class="searchHistory">
         <button class="searchHistoryBtn">Your Search History</button>
         <button class="clearHistoryBtn">Clear Search History</button>
