still working through bugs on forecast display

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
       </section>
 
       <h2>5-Day Forecast</h2>
-      <section class="fiveDay"></section>
+      <section class="fiveDay">
+      <h4 id="cityName"></h4>
+        <p id="date5"></p>
+        <p id="temp5"></p>
+        <p id="humidity5"></p>
+        <p id="windSpeed5"></p>
+        <p id="weatherIcon5"></p>
+        <p id="fiveDayForecast"></p>
+      </section>
 
       <h3 style="text-align: end;">Search History</h3>
       <section class="searchHistory">
