fixed bug for previously searched

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section class="inputs">
         <label for="CityState">Where are you?</label>
         <br>
-        <input type="text" id="cityState" placeholder="Durham, NC" />
+        <input type="text" id="cityState" placeholder="City Name Only" />
         <button id="searchForWeather">Search</button>
       </section>
 
@@ -32,18 +32,11 @@
       <h2>5-Day Forecast</h2>
       <section class="fiveDay">
       <h4 id="cityName"></h4>
-        <!-- <p id="date5"></p>
-        <p id="temp5"></p>
-        <p id="humidity5"></p>
-        <p id="windSpeed5"></p>
-        <p id="weatherIcon5"></p>
-        <p id="fiveDayForecast"></p> -->
       </section>
 
-      <h3 style="text-align: end;">Search History</h3>
+     
       <section class="searchHistory">
-        <button class="searchHistoryBtn">Your Search History</button>
-        <button class="clearHistoryBtn">Clear Search History</button>
+        <button class="searchHistoryBtn">See Previous Searches</button>
       </section>
     </main>
   </body>
